// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown should access only enabled items with value during keyboard navigation 1`] = `
<div>
  <button
    aria-expanded="true"
    aria-haspopup="listbox"
    aria-labelledby="downshift-11-label downshift-11-toggle-button"
    class="Button Button--isPrimary"
    id="downshift-11-toggle-button"
    type="button"
  >
    Click me!
  </button>
  <ul
    aria-labelledby="downshift-11-label"
    class="List Dropdown__list"
    data-popper-escaped="true"
    data-popper-placement="top-start"
    data-popper-reference-hidden="true"
    id="downshift-11-menu"
    role="listbox"
    style="position: absolute; left: 0px; top: 0px; bottom: 0px; transform: translate(0px, -3px);"
    tabindex="-1"
  >
    <li
      class="ListItem ListItem--disabled List__item"
    >
      <span>
        Disabled
      </span>
    </li>
    <li
      aria-selected="false"
      class="ListItem ListItem--clickable List__item"
      id="downshift-11-item-0"
      role="option"
    >
      <span>
        With value 1
      </span>
    </li>
    <li
      class="ListItem List__item"
    >
      <span>
        Without value
      </span>
    </li>
    <div
      class="List__item customDiv"
    >
      Div
    </div>
    <li
      aria-selected="false"
      class="ListItem ListItem--clickable List__item"
      id="downshift-11-item-1"
      role="option"
    >
      <span>
        With value 2
      </span>
    </li>
  </ul>
</div>
`;

exports[`Dropdown should allow for conditional rendering of items 1`] = `
<div>
  <button
    aria-expanded="false"
    aria-haspopup="listbox"
    aria-labelledby="downshift-105-label downshift-105-toggle-button"
    class="Button Button--isPrimary"
    id="downshift-105-toggle-button"
    type="button"
  >
    Click me!
  </button>
  <ul
    aria-labelledby="downshift-105-label"
    class="List"
    id="downshift-105-menu"
    role="listbox"
    tabindex="-1"
  />
</div>
`;

exports[`Dropdown should render correctly closed 1`] = `
<div>
  <button
    aria-expanded="false"
    aria-haspopup="listbox"
    aria-labelledby="downshift-0-label downshift-0-toggle-button"
    class="Button Button--isPrimary"
    id="downshift-0-toggle-button"
    type="button"
  >
    Click me!
  </button>
  <ul
    aria-labelledby="downshift-0-label"
    class="List"
    id="downshift-0-menu"
    role="listbox"
    tabindex="-1"
  />
</div>
`;

exports[`Dropdown should render correctly opened 1`] = `
<div>
  <button
    aria-expanded="true"
    aria-haspopup="listbox"
    aria-labelledby="downshift-3-label downshift-3-toggle-button"
    class="Button Button--isPrimary"
    id="downshift-3-toggle-button"
    type="button"
  >
    Click me!
  </button>
  <ul
    aria-labelledby="downshift-3-label"
    class="List Dropdown__list"
    data-popper-escaped="true"
    data-popper-placement="top-start"
    data-popper-reference-hidden="true"
    id="downshift-3-menu"
    role="listbox"
    style="position: absolute; left: 0px; top: 0px; bottom: 0px; transform: translate(0px, -3px);"
    tabindex="-1"
  >
    <li
      class="ListItem ListItem--disabled List__item"
    >
      <span>
        Disabled
      </span>
    </li>
    <li
      aria-selected="false"
      class="ListItem ListItem--clickable List__item"
      id="downshift-3-item-0"
      role="option"
    >
      <span>
        With value
      </span>
    </li>
  </ul>
</div>
`;

exports[`Dropdown should render correctly with mixed children: array and single ListItem 1`] = `
<div>
  <button
    aria-expanded="true"
    aria-haspopup="listbox"
    aria-labelledby="downshift-42-label downshift-42-toggle-button"
    class="Button Button--isPrimary"
    id="downshift-42-toggle-button"
    type="button"
  >
    Click me!
  </button>
  <ul
    aria-labelledby="downshift-42-label"
    class="List Dropdown__list"
    data-popper-escaped="true"
    data-popper-placement="top-start"
    data-popper-reference-hidden="true"
    id="downshift-42-menu"
    role="listbox"
    style="position: absolute; left: 0px; top: 0px; bottom: 0px; transform: translate(0px, -3px);"
    tabindex="-1"
  >
    <li
      class="ListItem ListItem--disabled List__item"
    >
      <span>
        Disabled
      </span>
    </li>
    <li
      aria-selected="false"
      class="ListItem ListItem--clickable List__item"
      id="downshift-42-item-0"
      role="option"
    >
      <span>
        one
      </span>
    </li>
    <li
      aria-selected="false"
      class="ListItem ListItem--clickable List__item"
      id="downshift-42-item-1"
      role="option"
    >
      <span>
        two
      </span>
    </li>
  </ul>
</div>
`;
